--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SuperParties
 version: "1.0.0"
 main: me.superpenguin.superparties.SuperParties
-api-version: 1.20
+api-version: '1.20'
 authors: [SuperPenguin]
 description: Party plugin with extensible API!
 
